--- a/Self-develop/Array-Problem/readme.me
+++ b/Self-develop/Array-Problem/readme.me
@@ -20,12 +20,12 @@ Implement an algorithm to find the smallest subarray with a sum greater than a g
 Implement an algorithm to find the length of the longest increasing subarray.
 Implement an algorithm to find the maximum sum of non-adjacent numbers in an array.
 
-Find the maximum element in an array.
+1.Find the maximum element in an array.
 Calculate the sum of elements in an array.
-Reverse an array.
-Check if an array is sorted.
-Find the index of a specific element in an array.
-Remove duplicates from an array.
+2.Reverse an array.
+3.Check if an array is sorted.
+4.Find the index of a specific element in an array.
+5.Remove duplicates from an array.
 Rotate an array to the right by k steps.
 Implement a function to push and pop elements in a stack using an array.
 Merge two sorted arrays into a single sorted array.
