--- a/Self-develop/Array-Problem/readme.me
+++ b/Self-develop/Array-Problem/readme.me
@@ -21,11 +21,11 @@ Implement an algorithm to find the length of the longest increasing subarray.
 Implement an algorithm to find the maximum sum of non-adjacent numbers in an array.
 
 1.Find the maximum element in an array.
-Calculate the sum of elements in an array.
 2.Reverse an array.
 3.Check if an array is sorted.
 4.Find the index of a specific element in an array.
 5.Remove duplicates from an array.
+6.Calculate the sum of elements in an array.
 Rotate an array to the right by k steps.
 Implement a function to push and pop elements in a stack using an array.
 Merge two sorted arrays into a single sorted array.
