--- a/Self-develop/Array-Problem/readme.me
+++ b/Self-develop/Array-Problem/readme.me
@@ -26,9 +26,11 @@ Implement an algorithm to find the maximum sum of non-adjacent numbers in an arr
 4.Find the index of a specific element in an array.
 5.Remove duplicates from an array.
 6.Calculate the sum of elements in an array.
+7.array odd and even
+Merge two sorted arrays into a single sorted array.
 Rotate an array to the right by k steps.
 Implement a function to push and pop elements in a stack using an array.
-Merge two sorted arrays into a single sorted array.
+
 Count the number of occurrences of an element in an array.
 Check if two arrays are equal.
 Implement a function to shift all zeroes to the end of an array.
