--- a/Self-develop/Array-Problem/readme.me
+++ b/Self-develop/Array-Problem/readme.me
@@ -27,6 +27,9 @@ Implement an algorithm to find the maximum sum of non-adjacent numbers in an arr
 5.Remove duplicates from an array.
 6.Calculate the sum of elements in an array.
 7.array odd and even
+8.union of two arrays
+9. find the intersection of two arrays
+10. find the complement of two arrays
 Merge two sorted arrays into a single sorted array.
 Rotate an array to the right by k steps.
 Implement a function to push and pop elements in a stack using an array.
