array problem added

--- a/Self-develop/Array-Problem/readme.me
+++ b/Self-develop/Array-Problem/readme.me
@@ -20,7 +20,7 @@ Implement an algorithm to find the smallest subarray with a sum greater than a g
 Implement an algorithm to find the length of the longest increasing subarray.
 Implement an algorithm to find the maximum sum of non-adjacent numbers in an array.
 
-1.Find the maximum element in an array.
+1.Find the maximum element in an array./ minimum
 2.Reverse an array.
 3.Check if an array is sorted.
 4.Find the index of a specific element in an array.
@@ -30,6 +30,15 @@ Implement an algorithm to find the maximum sum of non-adjacent numbers in an arr
 8.union of two arrays
 9. find the intersection of two arrays
 10. find the complement of two arrays
+11. Find the largest three elements in an array
+12.Find the most occurring element in an array of integers
+=>smallest three element
+12.Find second largest element in a given array
+13.Find k largest elements in a given array of integers.
+14.Find the second smallest elements in a given array of integers
+15.Find all elements in array of integers which have at-least two greater elements
+16.Find the most occurring element in an array of integers
+
 Merge two sorted arrays into a single sorted array.
 Rotate an array to the right by k steps.
 Implement a function to push and pop elements in a stack using an array.
