--- a/Self-develop/Array-Problem/readme.me
+++ b/Self-develop/Array-Problem/readme.me
@@ -38,6 +38,8 @@ Implement an algorithm to find the maximum sum of non-adjacent numbers in an arr
 14.Find the second smallest elements in a given array of integers
 15.Find all elements in array of integers which have at-least two greater elements
 16.Find the most occurring element in an array of integers
+17.Check if an array is a palindrome.
+18. find the peak element in an array.
 
 Merge two sorted arrays into a single sorted array.
 Rotate an array to the right by k steps.
